# Pubmed-API-Cli

./: .gitignore  pyproject.toml
get-papers-list/: README.md  pyproject.toml
get-papers-list/get_papers_list/: cli.py  codes.py  man.py  utils.py
package/: utils.py
