[project]
name = "get-papers-list"
version = "0.1.0"
description = "It is a cli tool to download the papers from pubmed usin"
authors = [{ name = "sourabh945", email = "sourabhsheokand945@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

# [tool.poetry.dependencies]
# requests = "*"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
